[gd_scene load_steps=73 format=2]

[ext_resource path="res://Scripts/InteractionComponent.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Witch.gd" type="Script" id=2]
[ext_resource path="res://Resources/Textures/Witch_spell.png" type="Texture" id=3]
[ext_resource path="res://Resources/Textures/Witch_walk clone.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Inventory.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/PotionMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Shop.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Dialogue.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Clock.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/QuestBoard.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Quests.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Social.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/Quests.gd" type="Script" id=13]
[ext_resource path="res://Scripts/Social.gd" type="Script" id=14]
[ext_resource path="res://Scenes/Menu.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=16]
[ext_resource path="res://Resources/Textures/witch_flight-Sheet.png" type="Texture" id=17]

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 17 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 17 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 17 )
region = Rect2( 0, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 17 )
region = Rect2( 256, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 17 )
region = Rect2( 512, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 17 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 17 )
region = Rect2( 256, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 17 )
region = Rect2( 512, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 17 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 17 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 17 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 768, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 768, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 768, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 768, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 45 ) ],
"loop": true,
"name": "flight_down",
"speed": 5.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 48 ) ],
"loop": true,
"name": "flight_left",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 51 ) ],
"loop": true,
"name": "flight_right",
"speed": 5.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 54 ) ],
"loop": true,
"name": "flight_up",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ SubResource( 40 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "spell_down",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "spell_left",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "spell_right",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "spell_up",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "walk_down",
"speed": 6.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "walk_left",
"speed": 6.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "walk_right",
"speed": 6.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "walk_up",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=42]
radius = 9.50063
height = 0.0

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 21.7216, 23.6461 )

[node name="Witch" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="WitchSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.217072, -11.2154 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 41 )
animation = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.397667, -1.89131 )
shape = SubResource( 42 )

[node name="SpellTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="InteractionComponent" type="Area2D" parent="."]
position = Vector2( -96.2171, -243.215 )
collision_layer = 2147483651
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionComponent"]
position = Vector2( 95.244, 230.173 )
shape = SubResource( 43 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -3.32207, -15.4724 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Clock" parent="CanvasLayer" instance=ExtResource( 9 )]
margin_left = 917.636
margin_top = 5.74977
margin_right = 957.636
margin_bottom = 45.7498

[node name="Inventory" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false

[node name="PotionMenu" parent="CanvasLayer" instance=ExtResource( 6 )]
visible = false

[node name="Shop" parent="CanvasLayer" instance=ExtResource( 7 )]
visible = false

[node name="Dialogue" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false
margin_top = 3.77551
margin_bottom = 3.77551

[node name="QuestBoard" parent="CanvasLayer" instance=ExtResource( 10 )]
visible = false

[node name="Quests" parent="CanvasLayer" instance=ExtResource( 11 )]
visible = false
script = ExtResource( 13 )

[node name="Social" parent="CanvasLayer" instance=ExtResource( 12 )]
visible = false
script = ExtResource( 14 )

[node name="Menu" parent="CanvasLayer" instance=ExtResource( 15 )]
visible = false
script = ExtResource( 16 )

[connection signal="timeout" from="SpellTimer" to="." method="_on_SpellTimer_timeout"]
[connection signal="body_entered" from="InteractionComponent" to="InteractionComponent" method="_on_InteractionComponent_body_entered"]
[connection signal="body_exited" from="InteractionComponent" to="InteractionComponent" method="_on_InteractionComponent_body_exited"]
